--- a/ReactLearningWebApi/appsettings.json
+++ b/ReactLearningWebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=.;initial catalog=ReactLearning;persist security info=True;Integrated Security=SSPI"
+  }
 }
